--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,40 @@
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app"s APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
+
+# Enable support for AndroidX
 android.useAndroidX=true
-org.gradle.warning.mode=all
+
+# Silence the warning about non-transitive R classes
 android.nonTransitiveRClass=false
+
+# Enable resource finalization
 android.nonFinalResIds=false
+
+# Enable caching of compiled resources
+android.enableResourceOptimizations=true
+
+# Enable incremental compilation
+kotlin.incremental=true
+
+# Enable parallel project execution
+org.gradle.parallel=true
+
+# Enable the build cache
+org.gradle.caching=true
+
+# Enable daemon to speed up builds
+org.gradle.daemon=true
+
+# Enable configuration on demand
+org.gradle.configureondemand=true
+
+# Set the log level to warn
+org.gradle.logging.level=warn
+
+# Workaround for certain build issues
+android.enableJetifier=true
